--- a/microservicecloud-config-dept-client.yml
+++ b/microservicecloud-config-dept-client.yml
@@ -4,9 +4,9 @@ spring:
         - dev
 ---
 server:
-  port: 8001
+    port: 8001
 spring:
-    profiles:dev
+    profiles: dev
     application:
         name: microservicecloud-config-dept-client
     datasource:
@@ -20,19 +20,18 @@ spring:
             initial-size: 5                                       # 初始化连接数
             max-total: 5                                          # 最大连接数
             max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+
 mybatis:
     config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
     type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
-    mapper-locations:
-    - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
-
+    mapper-locations: - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 eureka:
     client: #客户端注册进eureka服务列表内
         service-url:
-        #defaultZone: http://localhost:7001/eureka
+      #defaultZone: http://localhost:7001/eureka
         defaultZone: http://eureka7001.com:7001/eureka/
     instance:
-        instance-id: microservicecloud-dept8001 #自定义服务名称
+        instance-id: microservicecloud-config-dept-client #自定义服务名称
         prefer-ip-address: true #访问路径显示IP地址
 
 info:
@@ -40,12 +39,11 @@ info:
     company.name: www.atguigu.com
     build.artifactId: $project.artifactId$
     build.version: $project.version$
-    
 ---
 server:
-  port: 8001
+    port: 8001
 spring:
-    profiles:test
+    profiles: test
     application:
         name: microservicecloud-config-dept-client
     datasource:
@@ -59,19 +57,18 @@ spring:
             initial-size: 5                                       # 初始化连接数
             max-total: 5                                          # 最大连接数
             max-wait-millis: 200                                  # 等待连接获取的最大超时时间
+
 mybatis:
     config-location: classpath:mybatis/mybatis.cfg.xml        # mybatis配置文件所在路径
     type-aliases-package: com.atguigu.springcloud.entities    # 所有Entity别名类所在包
-    mapper-locations:
-    - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
-
+    mapper-locations: - classpath:mybatis/mapper/**/*.xml                       # mapper映射文件
 eureka:
     client: #客户端注册进eureka服务列表内
         service-url:
-        #defaultZone: http://localhost:7001/eureka
+      #defaultZone: http://localhost:7001/eureka
         defaultZone: http://eureka7001.com:7001/eureka/
     instance:
-        instance-id: microservicecloud-dept8001 #自定义服务名称
+        instance-id: microservicecloud-config-dept-client #自定义服务名称
         prefer-ip-address: true #访问路径显示IP地址
 
 info:
